fix(group-description): removes extra margin between paragraphs

--- a/client/pages/group/index.sass
+++ b/client/pages/group/index.sass
@@ -8,3 +8,6 @@ main#group
 	[data-role="group-logo"]
 		background-color: #C4C4C4
 		margin-right: -3px
+
+	[data-role="group-description"] p:first-of-type
+		margin-top: 0
